Parâmetros da URL obtidos e iniciada a conversão do algoritmo em C para JS

--- a/jogo-da-caixa-home.html
+++ b/jogo-da-caixa-home.html
@@ -10,7 +10,7 @@
 		<a class="theFloating theRight" href="javascript:history.go(0)">Atualizar</a>
 		<div>
 			<h1>Vamos jogar!</h1>
-			<form method="get" action="cgi-bin/jogo-da-caixa-play.cgi">
+			<form method="get" action="cgi-bin/jogo-da-caixa-play.html">
 				<select name="ope">
 					<option value="0">Mapas prontos</option>
 					<option value="1">Testar mapas</option>
@@ -26,7 +26,7 @@
 		<hr>
 		<div>
 			<h1>É hora de criar!</h1>
-			<form method="get" action="cgi-bin/jogo-da-caixa-maker.cgi">
+			<form method="get" action="cgi-bin/jogo-da-caixa-maker.html">
 				<select name="ope">
 					<option value="0">Criar novo</option>
 					<option value="1">Editar existente</option>
